# filecrypt

./: Cargo.toml  README.md
docs/: filecrypt.html
src/: main.rs
