[package]
name = "filecrypt"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
aes = "0.8"
aes-gcm = "0.10"
argon2 = "0.4"
rand = "0.8"
rand_core = "0.6"
zeroize = "1.5"
anyhow = "1.0"
rpassword = "7.0.0"
# No need for base64 unless you want it for something else

